--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="style.css">
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <h1 style="background-color: purple;">DRAWING AND CERAMIC<h1>
+    <h1 style="background-color: purple;"><maquee>DRAWING AND CERAMIC</maquee><h1>
 <img src="cer2.jpg" alt="" height="400" width="600">
     <p>For ceramics we provide further processing to estimate horizontal cross-sections (profile-lines) for printed documentation, as it is done by manual drawing</p>
     <p>Ceramic art is art made from ceramic materials, including clay. It may take forms including artistic pottery, including tableware, tiles, figurines and other sculpture. As one of the plastic arts, ceramic art is one of the visual arts. While some ceramics are considered fine art, such as pottery or sculpture, most are considered to be decorative, industrial or applied art objects</p>
     <img src="cer1.jpg" alt="" height="400" width="600">
     <p>We draw pictures and make great ceramics that are intrested by everyone.Nevertheless, despite such exceptions, ceramics generally display the properties of hardness, refractoriness (high melting point), low conductivity</p>
-    <h1>ABOUT OUR DRAWINGS</h1>
+        <h1><maquee>ABOUT OUR DRAWINGS</maquee></h1>
     <p> Our Drawings are created by our artist using instruments to create lines on paper or another two-dimensional surface. Common drawing instruments include pencils, chalk, charcoal, pen and ink, colored pencils, crayons, pastels, inked brushes, erasers, markers, styluses, and even metals</p>
     <h2 style="background-color: purple;">These are some of the types of drawing that we deal with in group</h2>
     <li>Caricature drawing. Caricature drawings are images that depict their subjects in oversimplified or overdramatized manners</li>
@@ -25,7 +25,7 @@
     <li>Perspective drawing etc</li>
 
     <p>We also do other forms of ART like Painting, sculpture,Literature and Architecture etc.</p>
-   <h1 style="background-color: purple;">STYLES THAT WE USE IN OUR DRAWINGS</h1>
+        <h1 style="background-color: purple;"><maquee>STYLES THAT WE USE IN OUR DRAWINGS</maquee></h1>
 
    <p>Style is basically the manner in which the artist portrays his or her subject matter and how the artist expresses his or her vision. Style is determined by the characteristics that describe the artwork, such as the way the artist employs form, color, and composition, to name just a few.</p>
    <p>Ceramic products are hard, porous, and brittle. As a result, they are used to make pottery, bricks, tiles, cements, and glass. Ceramics are also used at many places in gas turbine engines. Bio-ceramics are used as dental implants and synthetic bones</P>
