--- a/page1.html
+++ b/page1.html
@@ -7,11 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OUR DRAWINGS</title>
-    <h1 style="background-color: yellow;">DRAWINGS THAT WE DEAL WITH</h1>
+    <h1 style="background-color: yellow;"><maquee>DRAWINGS THAT WE DEAL WITH</maquee></h1>
     <img src="D1.jpg" alt="" height="400px" width="400px">
-    <P style="background-color: yellow;">BEAUTIFY YOUR HOME</P>
+    <P style="background-color: yellow;"><maquee>BEAUTIFY YOUR HOME</maquee></P>
     <img src="D2.jpg" alt="" height="400px" width="400px"><img src="D3.jpg" alt="" height="400px" width="400px">
-    <h1>WITH NATURE</h1>
+    <h1><maquee>WITH NATURE</maquee></h1>
     <img src="NAT1.jpg" alt="" height="400px" width="400px"><img src="NAT 2.jpg" alt="" height="400px" width="400px">
 </head>
 <a href="index.html"><p>homepage</p></a>
